Reorg service and api classes; implement reusable connection handling